# EVE-Alert-Opensource

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  alert.py  config.py  functions.py  installer_linux.sh  installer_window.bat  main.py  pyproject.toml  pytest.ini  requirements.txt  windowscapture.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  suggestion_report.yaml
.github/workflows/: python-package.yml
evealert/: __init__.py  alert.py  constants.py  exceptions.py  functions.py  logger.py  vision.py  windowscapture.py
evealert/client/: client.py  listener.py  logger.py  main.py
evealert/manager/: alertmanager.py
evealert/managers/: alertmanager.py  regionmanager.py  settingsmanager.py
evealert/menu/: config.py  main.py  setting.py
evealert/menus/: alert.py  configuration.py  description.py  mainmenu.py  overlay.py  settings.py
evealert/server/: client.py  server.py
evealert/settings/: constants.py  functions.py  helper.py  logger.py  settings.py
evealert/tests/: tests.py
evealert/tools/: overlay.py  vision.py  windowscapture.py
old/: alert.py  config.py  functions.py  start.py  vision.py  windowscapture.py
tests/: tests.py
